fix: jumpy cards in carousel

--- a/src/components/card-carousel/card-carousel.scss
+++ b/src/components/card-carousel/card-carousel.scss
@@ -3,6 +3,7 @@
 .dish-scroll-wrapper {
 	position: relative;
 	overflow: hidden;
+	width: 100%;
 	.dish-scroll-container {
 		display: flex;
 		scroll-behavior: smooth;
